src/objects/Template_Tools__c/Template_Tools__c.object-meta.xml
<CustomObject>
    <label>Web Portal Template Tools</label>
    <nameField>
        <label>Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Portal Template Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>