src/objects/Template_Tools__c/fields/Authorization_Method__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Method__c</fullName>
    <label>Authorization Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Honeywell Approval</fullName>
            </value>
            <value>
                <fullName>Company Admin and Honeywell Approval</fullName>
            </value>
            <value>
                <fullName>Company Admin Approval</fullName>
            </value>
            <value>
                <fullName>No Approval Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>