src/objects/Template_Tools__c/fields/Portal_Access_Templates__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Templates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Name</label>
    <referenceTo>Portal_Access_Template__c</referenceTo>
    <relationshipName>Template_Tools</relationshipName>
    <type>Lookup</type>
</CustomField>