src/objects/Template_Tools__c/fields/Portal_Tools_Master__c.field-meta.xml
<CustomField>
    <fullName>Portal_Tools_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tool Name custom field</description>
    <label>Tool Name</label>
    <referenceTo>Portal_Tools_Master__c</referenceTo>
    <relationshipName>Template_Tools</relationshipName>
    <type>Lookup</type>
</CustomField>